...
        }}
        tabBar={props => BottomTabBarWrapper(props, handleLayout)}>
        <BottomTab.Screen
          name="RushShows"
          component={RushShowNavigator}
          options={{
            tabBarLabel: "Rush Shows",
            tabBarIcon: CreateTabBarIcon("drama-masks")
          }}
        />
        <BottomTab.Screen
          name="Settings"
          component={SettingsScreen}
          options={{
            tabBarLabel: "Settings",
            tabBarIcon: CreateTabBarIcon("cog")
          }}
        />
...
