...
}

export enum TodayTixLocation {
  Adelaide = 95,
  Brisbane = 19,
  Chicago = 3,
  London = 2,
  LosAngelesAndOrangeCounty = 5,
  Melbourne = 18,
  NewYork = 1,
  Perth = 93,
  SanFrancisco = 4,
  Sydney = 17,
...
