...
        category: {
          _type: "Category",
          name: "Musicals",
          id: 8,
          slug: "musicals"
        },
        displayName: "Little Shop of Horrors",
        endDate: "2025-05-31",
        genreTags: ["Musical"],
        heroImageUrl:
          "https://images.ctfassets.net/6pezt69ih962/3BWDIxnmh6kpSFXh0389KR/0ab26a9af6a0ba1b7184e7618c79a329/Little_Shop_of_Horrors_-_Hero",
        id: 24608,
        images: {
...
