...
    "eyJ2ZXJzaW9uIjoyLCJhdXRob3JpemF0aW9uRmluZ2VycHJpbnQiOiJleUowZVhBaU9pSktWMVFpTENKaGJHY2lPaUpGVXpJMU5pSXNJbXRwWkNJNklqSXdNVGd3TkRJMk1UWXRjSEp2WkhWamRHbHZiaUlzSW1semN5STZJbWgwZEhCek9pOHZZWEJwTG1KeVlXbHVkSEpsWldkaGRHVjNZWGt1WTI5dEluMC5leUpsZUhBaU9qRTNNRGs1TURJNE5UWXNJbXAwYVNJNklqSTNabUZsTlRaaUxUZ3laRFF0TkRneFpDMDVOekZrTFdVMllXTTBOV0UyTTJNNFppSXNJbk4xWWlJNkltczFjV2czZERSemJqSTVObWhyTTNvaUxDSnBjM01
  localBraintreeClientToken:
    "eyJ2ZXJzaW9uIjoyLCJhdXRob3JpemF0aW9uRmluZ2VycHJpbnQiOiJleUowZVhBaU9pSktWMVFpTENKaGJHY2lPaUpGVXpJMU5pSXNJbXRwWkNJNklqSXdNVGd3TkRJMk1UWXRjSEp2WkhWamRHbHZiaUlzSW1semN5STZJbWgwZEhCek9pOHZZWEJwTG1KeVlXbHVkSEpsWldkaGRHVjNZWGt1WTI5dEluMC5leUpsZUhBaU9qRTNNRGs1TURJNE5UWXNJbXAwYVNJNklqSTNabUZsTlRaaUxUZ3laRFF0TkRneFpDMDVOekZrTFdVMllXTTBOV0UyTTJNNFppSXNJbk4xWWlJNkltczFjV2czZERSemJqSTVObWhyTTNvaUxDSnBjM01
  calculatedTotal: {
    value: 29.5,
    currency: "GBP",
    display: "£29.50",
    displayRounded: "£29.50"
  },
  configurableTexts: {
    _type: "HoldConfigurableTexts",
    aboutSeatsButton: null,
    amountDisplayForWeb: "£29.50",
...
  seatsInfo: {
    doorInfo: null,
    endSeat: null,
    row: "J",
    seats: ["28"],
    sectionCode: "DC",
    sectionName: "Dress Circle",
    startSeat: "28",
    seatsDetails: []
  },
  secret: "ffcaddbc-6d9e-46ee-95e7-ef9fbaaf7c2b",
  sectionDescriptionMetadata: null,
  showEndDatetime: null,
...
    endLocalTime: null,
    datetime: "2024-03-07T19:30:00.000Z",
    datetimeEpoch: 1709839800,
    daypart: Daypart.Evening,
    dayOfWeek: DayOfWeek.Thursday,
    localDate: "2024-03-07",
    localTime: "19:30",
    numDaysOut: 0,
    partTwoDatetime: null,
    partTwoDatetimeEpoch: null,
    show: {
      _type: "Show",
      id: 22396,
...
      category: {
        _type: "Category",
        id: 8,
        name: "Musicals",
        slug: "musicals"
      },
      displayName: "Guys & Dolls",
      genreTags: ["Musical"],
      location: {
        _type: "Location",
        id: 2,
        abbr: "LON",
        country: "GB",
...
