...
            <LoadingSpinner />
          </View>
        )
      };
    if (createHoldError)
      return {
        actions: [{label: "Retry", onPress: retryPlacingHold}],
        children: `Oh no! There was an error getting tickets to ${show?.displayName}:\n${createHoldError.message ?? createHoldError.error}`
      };
    if (isHoldScheduled)
      return {
        actions: [
          {
            label: "Cancel",
            onPress: () => {
              cancelHold();
              setSelectedShow(undefined);
              setSelectedShowtime(undefined);
              setSelectedNumberOfTickets(NaN);
            }
...
