...
      endLocalTime: null,
      datetime: "2024-02-27T19:00:00.000",
      datetimeEpoch: 1709060400,
      daypart: Daypart.Evening,
      dayOfWeek: DayOfWeek.Tuesday,
      localDate: "2024-02-27",
      localTime: "19:00",
      lotteryTickets: null,
      numDaysOut: 0,
      partTwoDatetime: null,
      partTwoDatetimeEpoch: null,
      providerShowtimeId: null,
      regularTickets: null,
...
      // be in the future
      datetime: "3000-12-31T23:59:59.000",
      datetimeEpoch: 32535215999,
      daypart: Daypart.Matinee,
      dayOfWeek: DayOfWeek.Tuesday,
      localDate: "3000-12-31",
      localTime: "23:59",
      lotteryTickets: null,
      numDaysOut: 0,
      partTwoDatetime: null,
      partTwoDatetimeEpoch: null,
      providerShowtimeId: null,
      regularTickets: null,
...
